working section added

--- a/index.html
+++ b/index.html
@@ -56,5 +56,66 @@
         <img src="assets/imgs/discriptionImg.png" />
       </div>
     </div>
+    <div class="working">
+      <h1>How It Works</h1>
+
+      <div class="workingSec">
+        <div class="workingSecText">
+          <img src="assets/imgs/circle1.png" />
+          <div>
+            <h2>Save on ride</h2>
+            <p>
+              With inDriver, you can book rides way cheaper! Say no to
+              compulsory rates and high-demand manipulations.
+            </p>
+          </div>
+        </div>
+        <div class="workingSecImage">
+          <img src="assets/imgs/phone1.png" />
+        </div>
+      </div>
+
+      <div class="workingSec">
+        <div class="workingSecImage">
+          <img src="assets/imgs/phone2.png" />
+        </div>
+        <div class="workingSecText">
+          <img src="assets/imgs/circle2.png" />
+          <div>
+            <h2>Save on ride</h2>
+            <p>
+              With inDriver, you can book rides way cheaper! Say no to
+              compulsory rates and high-demand manipulations.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="workingSec">
+        <div class="workingSecText">
+          <img src="assets/imgs/circle1.png" />
+          <div>
+            <h2>Save on ride</h2>
+            <p>
+              With inDriver, you can book rides way cheaper! Say no to
+              compulsory rates and high-demand manipulations.
+            </p>
+          </div>
+        </div>
+        <div class="workingSecImage">
+          <img src="assets/imgs/phone1.png" />
+        </div>
+      </div>
+
+    </div>
+
+    <div>
+      <div>
+
+      </div>
+      <diV>
+        
+      </diV>
+    </div>
   </body>
 </html>
