--- a/index.html
+++ b/index.html
@@ -106,16 +106,11 @@
           <img src="assets/imgs/phone1.png" />
         </div>
       </div>
-
     </div>
 
-    <div>
-      <div>
-
-      </div>
-      <diV>
-        
-      </diV>
+    <div class="emailSubmit">
+      <div class="emailSubmitLeft"></div>
+      <div class="emailSubmitRight"></div>
     </div>
   </body>
 </html>
