--- a/index.html
+++ b/index.html
@@ -109,8 +109,30 @@
     </div>
 
     <div class="emailSubmit">
-      <div class="emailSubmitLeft"></div>
-      <div class="emailSubmitRight"></div>
+      <div class="emailSubmitLeft">
+        <h1>
+          Let’s <span class="accentText">Burst the</span> damn
+          <span class="accentText">bubble.</span>
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+          adipisci a et nulla natus, beatae omnis iste reiciendis, aliquam
+          officia voluptatibus voluptate voluptas <br /><br />
+          beatae omnis iste reiciendis, aliquam officia voluptatibus voluptate
+          voluptas beatae omnis iste reiciendis, aliquam officia voluptatibus
+          voluptate voluptas
+        </p>
+      </div>
+      <div class="emailSubmitRight">
+        <div class="ear">
+          <h1>You only hear from us when it matters.</h1>
+          <img src="assets/imgs/ear.png" />
+        </div>
+        <div class="emailSubmitForm">
+          <input type="text" placeholder="Enter Id" />
+          <button type="submit">➜</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
