comming soon secton done

--- a/index.html
+++ b/index.html
@@ -134,5 +134,8 @@
         </div>
       </div>
     </div>
+    <div class="commingSoon">
+      <h1>Coming Soon</h1>
+    </div>
   </body>
 </html>
