--- a/index.html
+++ b/index.html
@@ -137,5 +137,7 @@
     <div class="commingSoon">
       <h1>Coming Soon</h1>
     </div>
+    <div class="faq"></div>
+    <div class="footer"></div>
   </body>
 </html>
