--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
+    <!-- googlefounts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Boxicons CSS -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
     <title>Document</title>
@@ -137,7 +145,69 @@
     <div class="commingSoon">
       <h1>Coming Soon</h1>
     </div>
-    <div class="faq"></div>
-    <div class="footer"></div>
+    <div class="faq">
+      <h1>Frequently Asked Questions</h1>
+      <div class="faqQues">
+        <div class="faqQue">
+          <div>
+            <i class="bx bxs-circle"></i>
+            <p>What is Kraya?</p>
+          </div>
+          <i class="bx bxs-chevrons-right"></i>
+        </div>
+        <div class="faqQue">
+          <div>
+            <i class="bx bxs-circle"></i>
+            <p>Why Kraya?</p>
+          </div>
+          <i class="bx bxs-chevrons-right"></i>
+        </div>
+        <div class="faqQue">
+          <div>
+            <i class="bx bxs-circle"></i>
+            <p>How will things work ?</p>
+          </div>
+          <i class="bx bxs-chevrons-right"></i>
+        </div>
+        <div class="faqQue">
+          <div>
+            <i class="bx bxs-circle"></i>
+            <p>How will things work ?</p>
+          </div>
+          <i class="bx bxs-chevrons-right"></i>
+        </div>
+      </div>
+      <div class="faqAns">
+        <div>
+          <h3>What is Kraya?</h3>
+          <p>
+            Kraya helps social sellers and small businesses to boost their sales
+            through the power of social media. Our app makes it easy for social
+            sellers to create and manage their online storefronts, connect with
+            customers, and track their sales and analytics all in one place.
+          </p>
+        </div>
+      </div>
+      <div class="faqCTA">
+        <p>Sell smarter, with Kraya</p>
+        <a href="#">Join the waitlist ➜</a>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="contactUs">
+        <h2>Contact Us</h2>
+        <input type="text" placeholder="Name" />
+        <input type="text" placeholder="Email" />
+        <textarea
+          cols="30"
+          rows="10"
+          placeholder="Message.."
+          name="message"
+          required
+        ></textarea>
+        <button type="submit">Submit <i class="bx bx-send"></i></button>
+      </div>
+      <div class="socialLinks"></div>
+    </div>
   </body>
 </html>
