--- a/index.html
+++ b/index.html
@@ -207,7 +207,18 @@
         ></textarea>
         <button type="submit">Submit <i class="bx bx-send"></i></button>
       </div>
-      <div class="socialLinks"></div>
+      <div class="socialLinks">
+        <img class="footerlogo" src="assets/imgs/KrayaLogo.png" />
+        <div>
+          <div>
+            <img src="assets/imgs/facebook.png" />
+            <img src="assets/imgs/instagram.png" />
+            <img src="assets/imgs/twitter.png" />
+            <img src="assets/imgs/youtube.png" />
+          </div>
+          <p>sharmaayush41913@gmail.com</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
