Mob View Initial

--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
           <li><img src="assets/imgs/KrayaLogo.png" /></li>
         </ul>
         <ul>
-          <li><a href="#">About Us</a></li>
-          <li><a class="navCTA" href="#">Join the waitlist ➜</a></li>
+          <li class="PCmenu"><a href="#">About Us</a></li>
+          <li class="PCmenu">
+            <a class="navCTA" href="#">Join the waitlist ➜</a>
+          </li>
+          <li class="MOBmenu">
+            <a class="navCTA" href="#">Menu</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -44,24 +49,25 @@
         </p>
       </div>
     </div>
-    <div class="discription">
-      <div class="discriptionText">
-        <h1>
-          Make e-commerce more engaging and human like with
-          <span>short videos</span>
-        </h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
-          adipisci a et nulla natus, beatae omnis iste reiciendis, aliquam
-          officia voluptatibus voluptate voluptas, debitis alias reprehenderit
-          obcaecati perspiciatis temporibus nihil nesciunt
-        </p>
-        <div class="discriptionCTA">
-          <a href="#">Join the waitlist ➜</a>
+    <div class="discriptionSection">
+      <div class="discription">
+        <div class="discriptionText">
+          <h1>
+            Make e-commerce more engaging and human like with
+            <span>short videos</span>
+          </h1>
+          <p>
+            My name is Ayush Sharma My name is Ayush Sharma My name is Ayush
+            Sharma My name is Ayush Sharma My name is Ayush Sharma My name is
+            Ayush Sharma My name is Ayush Sharma
+          </p>
+        </div>
+        <div class="discriptionImage">
+          <img src="assets/imgs/discriptionImg.png" />
         </div>
       </div>
-      <div class="discriptionImage">
-        <img src="assets/imgs/discriptionImg.png" />
+      <div class="discriptionCTA">
+        <a href="#">Join the waitlist ➜</a>
       </div>
     </div>
     <div class="working">
