Mobil Email Section

--- a/index.html
+++ b/index.html
@@ -122,6 +122,45 @@
       </div>
     </div>
 
+    <div class="workingMob">
+      <h1>How It Works</h1>
+      <div class="workingMobSections">
+        <img class="SectionNumber" src="assets/imgs/circle1.png" />
+        <img class="SectionImage" src="assets/imgs/phone1.png" />
+        <div>
+          <h2>Save on ride</h2>
+          <p>
+            With inDriver, you can book rides way cheaper! Say no to compulsory
+            rates and high-demand manipulations.
+          </p>
+        </div>
+      </div>
+
+      <div class="workingMobSections">
+        <img class="SectionNumber" src="assets/imgs/circle1.png" />
+        <img class="SectionImage" src="assets/imgs/phone1.png" />
+        <div>
+          <h2>Save on ride</h2>
+          <p>
+            With inDriver, you can book rides way cheaper! Say no to compulsory
+            rates and high-demand manipulations.
+          </p>
+        </div>
+      </div>
+
+      <div class="workingMobSections">
+        <img class="SectionNumber" src="assets/imgs/circle1.png" />
+        <img class="SectionImage" src="assets/imgs/phone1.png" />
+        <div>
+          <h2>Save on ride</h2>
+          <p>
+            With inDriver, you can book rides way cheaper! Say no to compulsory
+            rates and high-demand manipulations.
+          </p>
+        </div>
+      </div>
+    </div>
+
     <div class="emailSubmit">
       <div class="emailSubmitLeft">
         <h1>
@@ -130,12 +169,15 @@
         </h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
-          adipisci a et nulla natus, beatae omnis iste reiciendis, aliquam
-          officia voluptatibus voluptate voluptas <br /><br />
+          adipisci a et nulla natus, beatae omnis iste reiciendis, aliquam offi
+          <br /><br />
           beatae omnis iste reiciendis, aliquam officia voluptatibus voluptate
-          voluptas beatae omnis iste reiciendis, aliquam officia voluptatibus
-          voluptate voluptas
+          voluptas beatae omnis iste reiciendis
         </p>
+        <div class="EmailMobileCTA">
+          <a href="#">Join the waitlist ➜</a>
+        </div>
+        <a class="emailDiss">What is Kraya ? <i class="bx bx-right-arrow-alt"></i></a>
       </div>
       <div class="emailSubmitRight">
         <div class="ear">
