htl+css phone view done

--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
         <div class="EmailMobileCTA">
           <a href="#">Join the waitlist ➜</a>
         </div>
-        <a class="emailDiss">What is Kraya ? <i class="bx bx-right-arrow-alt"></i></a>
+        <a class="emailDiss"
+          >What is Kraya ? <i class="bx bx-right-arrow-alt"></i
+        ></a>
       </div>
       <div class="emailSubmitRight">
         <div class="ear">
@@ -241,6 +243,57 @@
         <a href="#">Join the waitlist ➜</a>
       </div>
     </div>
+
+    <div class="faqMobile">
+      <img src="assets/imgs/que.png" />
+      <h1>Frequently Asked Questions</h1>
+      <hr class="rounded" />
+      <div class="mobfaqs">
+        <div class="mobFaqQues">
+          <h2>Where can I watch?</h2>
+          <i class="bx bx-x"></i>
+        </div>
+        <div class="mobFaqAns queClicked">
+          Nibh quisque suscipit fermentum netus nulla cras porttitor euismod
+          nulla. Orci, dictumst nec aliquet id ullamcorper venenatis.
+        </div>
+      </div>
+      <hr class="rounded" />
+      <div class="mobfaqs">
+        <div class="mobFaqQues">
+          <h2>Where can I watch?</h2>
+          <i class="bx bx-x"></i>
+        </div>
+        <div class="mobFaqAns">
+          Nibh quisque suscipit fermentum netus nulla cras porttitor euismod
+          nulla. Orci, dictumst nec aliquet id ullamcorper venenatis.
+        </div>
+      </div>
+      <hr class="rounded" />
+      <div class="mobfaqs">
+        <div class="mobFaqQues">
+          <h2>Where can I watch?</h2>
+          <i class="bx bx-x"></i>
+        </div>
+        <div class="mobFaqAns">
+          Nibh quisque suscipit fermentum netus nulla cras porttitor euismod
+          nulla. Orci, dictumst nec aliquet id ullamcorper venenatis.
+        </div>
+      </div>
+      <hr class="rounded" />
+      <div class="mobfaqs">
+        <div class="mobFaqQues">
+          <h2>Where can I watch?</h2>
+          <i class="bx bx-x"></i>
+        </div>
+        <div class="mobFaqAns">
+          Nibh quisque suscipit fermentum netus nulla cras porttitor euismod
+          nulla. Orci, dictumst nec aliquet id ullamcorper venenatis.
+        </div>
+      </div>
+      <hr class="rounded" />
+    </div>
+
     <div class="footer">
       <div class="contactUs">
         <h2>Contact Us</h2>
