mobile menu js added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
             <a class="navCTA" href="#">Join the waitlist ➜</a>
           </li>
           <li class="MOBmenu">
-            <a class="navCTA" href="#">Menu</a>
+            <a class="navCTA menuToggleButton" href="#">Menu</a>
+            <div class="navbarClose menuToggle">
+              <a>About Us </a>
+              <a>Contact Us</a>
+              <a>Join the waitlist</a>
+            </div>
           </li>
         </ul>
       </nav>
@@ -321,5 +326,6 @@
         </div>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
