faq section js added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="navCTA" href="#">Join the waitlist ➜</a>
           </li>
           <li class="MOBmenu">
-            <a class="navCTA menuToggleButton" href="#">Menu</a>
+            <a class="navCTA menuToggleButton"  >Menu</a>
             <div class="navbarClose menuToggle">
               <a>About Us </a>
               <a>Contact Us</a>
@@ -253,21 +253,10 @@
       <img src="assets/imgs/que.png" />
       <h1>Frequently Asked Questions</h1>
       <hr class="rounded" />
-      <div class="mobfaqs">
+      <div class="mobfaqs queClicked">
         <div class="mobFaqQues">
           <h2>Where can I watch?</h2>
-          <i class="bx bx-x"></i>
-        </div>
-        <div class="mobFaqAns queClicked">
-          Nibh quisque suscipit fermentum netus nulla cras porttitor euismod
-          nulla. Orci, dictumst nec aliquet id ullamcorper venenatis.
-        </div>
-      </div>
-      <hr class="rounded" />
-      <div class="mobfaqs">
-        <div class="mobFaqQues">
-          <h2>Where can I watch?</h2>
-          <i class="bx bx-x"></i>
+          <i class="bx bx-x faqToggleButton"></i>
         </div>
         <div class="mobFaqAns">
           Nibh quisque suscipit fermentum netus nulla cras porttitor euismod
@@ -278,7 +267,7 @@
       <div class="mobfaqs">
         <div class="mobFaqQues">
           <h2>Where can I watch?</h2>
-          <i class="bx bx-x"></i>
+          <i class="bx bx-plus faqToggleButton"></i>
         </div>
         <div class="mobFaqAns">
           Nibh quisque suscipit fermentum netus nulla cras porttitor euismod
@@ -289,7 +278,18 @@
       <div class="mobfaqs">
         <div class="mobFaqQues">
           <h2>Where can I watch?</h2>
-          <i class="bx bx-x"></i>
+          <i class="bx bx-plus faqToggleButton"></i>
+        </div>
+        <div class="mobFaqAns">
+          Nibh quisque suscipit fermentum netus nulla cras porttitor euismod
+          nulla. Orci, dictumst nec aliquet id ullamcorper venenatis.
+        </div>
+      </div>
+      <hr class="rounded" />
+      <div class="mobfaqs">
+        <div class="mobFaqQues">
+          <h2>Where can I watch?</h2>
+          <i class="bx bx-plus faqToggleButton"></i>
         </div>
         <div class="mobFaqAns">
           Nibh quisque suscipit fermentum netus nulla cras porttitor euismod
