contact us form done

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <a class="navCTA" href="#">Join the waitlist ➜</a>
           </li>
           <li class="MOBmenu">
-            <a class="navCTA menuToggleButton"  >Menu</a>
+            <a class="navCTA menuToggleButton">Menu</a>
             <div class="navbarClose menuToggle">
               <a>About Us </a>
-              <a>Contact Us</a>
+              <a href="/contact.html">Contact Us</a>
               <a>Join the waitlist</a>
             </div>
           </li>
