--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,78 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Compiled and minified CSS Materializecss-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+
+    <!-- Compiled and minified JavaScript Materializecss-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <link rel="stylesheet" href="contact.css" />
+
+    <!-- googlefounts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Boxicons CSS -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <title>Contact Us</title>
   </head>
   <body>
     <h1>Contact Us</h1>
-    <p>Any question or remarks? Just write us a message!</p>
+    <h2>Any question or remarks? Just write us a message!</h2>
+    <div class="contactInfo">
+      <h1>Contact Information</h1>
+      <p class="about">Say something to start a live chat!</p>
+      <div>
+        <i class="bx bxs-phone-call"></i>
+        <p>+1012 3456 789</p>
+      </div>
+      <div>
+        <i class="bx bxs-envelope"></i>
+        <p>demo@gmail.com</p>
+      </div>
+      <div>
+        <i class="bx bx-current-location"></i>
+        <p>132 Dartmouth Street Boston, Massachusetts 02156 United States</p>
+      </div>
+      <div class="circle1"></div>
+      <div class="circle2"></div>
+    </div>
+    <div class="Contactform">
+      <form>
+        <div class="input-field">
+          <input id="first_name" type="text" class="validate" />
+          <label for="first_name">First Name</label>
+        </div>
+        <div class="input-field">
+          <input id="last_name" type="text" class="validate" />
+          <label for="last_name">Last Name</label>
+        </div>
+        <div class="input-field">
+          <input id="email" type="email" class="validate" />
+          <label for="email">Email</label>
+        </div>
+        <div class="input-field">
+          <input id="telephone" type="tel" class="validate" />
+          <label for="telephone">Phone Number</label>
+        </div>
+        <div class="input-field">
+          <textarea id="textarea" class="materialize-textarea"></textarea>
+          <label for="textarea">Textarea</label>
+        </div>
+        <button class="submitButton" type="submit" name="action">
+          Send Message
+        </button>
+      </form>
+    </div>
   </body>
 </html>
