--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="faqQue">
           <div>
             <i class="bx bxs-circle"></i>
-            <p>What is Kraya?</p>
+            <p >What is Kraya?</p>
           </div>
           <i class="bx bxs-chevrons-right"></i>
         </div>
@@ -234,8 +234,8 @@
       </div>
       <div class="faqAns">
         <div>
-          <h3>What is Kraya?</h3>
-          <p>
+          <h3 class="faqQueArea">What is Kraya?</h3>
+          <p class="faqAnsArea">
             Kraya helps social sellers and small businesses to boost their sales
             through the power of social media. Our app makes it easy for social
             sellers to create and manage their online storefronts, connect with
