--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@
           <li><img src="assets/imgs/KrayaLogo.png" /></li>
         </ul>
         <ul>
-          <li class="PCmenu"><a href="#">About Us</a></li>
           <li class="PCmenu">
             <a class="navCTA" href="#">Join the waitlist ➜</a>
           </li>
           <li class="MOBmenu">
             <a class="navCTA menuToggleButton">Menu</a>
             <div class="navbarClose menuToggle">
-              <a>About Us </a>
               <a href="/contact.html">Contact Us</a>
               <a>Join the waitlist</a>
             </div>
@@ -62,9 +60,9 @@
             <span>short videos</span>
           </h1>
           <p>
-            My name is Ayush Sharma My name is Ayush Sharma My name is Ayush
-            Sharma My name is Ayush Sharma My name is Ayush Sharma My name is
-            Ayush Sharma My name is Ayush Sharma
+            Sell smarter, not harder with Kraya , social selling simplified for
+            social sellers. Elevate your social selling game with Kraya : the
+            all-in-one social selling app.
           </p>
         </div>
         <div class="discriptionImage">
@@ -82,10 +80,11 @@
         <div class="workingSecText">
           <img src="assets/imgs/circle1.png" />
           <div>
-            <h2>Save on ride</h2>
+            <h2>Get complete control over data!</h2>
             <p>
-              With inDriver, you can book rides way cheaper! Say no to
-              compulsory rates and high-demand manipulations.
+              View, manage, and track leads all in one place. View store
+              analytics, CTRs, repeat visits, and much more. Analyze reports and
+              make smart business decisions.
             </p>
           </div>
         </div>
@@ -101,10 +100,11 @@
         <div class="workingSecText">
           <img src="assets/imgs/circle2.png" />
           <div>
-            <h2>Save on ride</h2>
+            <h2>Set up a virtual storefront</h2>
             <p>
-              With inDriver, you can book rides way cheaper! Say no to
-              compulsory rates and high-demand manipulations.
+              Sellers get to create a virtual storefront where buyers can see
+              all the products at once. Having a virtual storefront elevates the
+              brand and trust among your customers.
             </p>
           </div>
         </div>
@@ -112,17 +112,18 @@
 
       <div class="workingSec">
         <div class="workingSecText">
-          <img src="assets/imgs/circle1.png" />
+          <img src="assets/imgs/circle3.png" />
           <div>
-            <h2>Save on ride</h2>
+            <h2>Shorten the customer buying journey</h2>
             <p>
-              With inDriver, you can book rides way cheaper! Say no to
-              compulsory rates and high-demand manipulations.
+              Shorten the customer buying journey and assist your customers in
+              pre purchase journey by engaging them with short videos. Let your
+              customers buy in video.
             </p>
           </div>
         </div>
         <div class="workingSecImage">
-          <img src="assets/imgs/phone1.png" />
+          <img src="assets/imgs/phone3.png" />
         </div>
       </div>
     </div>
@@ -133,34 +134,37 @@
         <img class="SectionNumber" src="assets/imgs/circle1.png" />
         <img class="SectionImage" src="assets/imgs/phone1.png" />
         <div>
-          <h2>Save on ride</h2>
+          <h2>Get complete control over data!</h2>
           <p>
-            With inDriver, you can book rides way cheaper! Say no to compulsory
-            rates and high-demand manipulations.
+            View, manage, and track leads all in one place. View store
+            analytics, CTRs, repeat visits, and much more. Analyze reports and
+            make smart business decisions.
           </p>
         </div>
       </div>
 
       <div class="workingMobSections">
-        <img class="SectionNumber" src="assets/imgs/circle1.png" />
-        <img class="SectionImage" src="assets/imgs/phone1.png" />
+        <img class="SectionNumber" src="assets/imgs/circle2.png" />
+        <img class="SectionImage" src="assets/imgs/phone2.png" />
         <div>
-          <h2>Save on ride</h2>
+          <h2>Set up a virtual storefront</h2>
           <p>
-            With inDriver, you can book rides way cheaper! Say no to compulsory
-            rates and high-demand manipulations.
+            Sellers get to create a virtual storefront where buyers can see all
+            the products at once.Having a virtual storefront elevates the brand
+            and trust among your customers.
           </p>
         </div>
       </div>
 
       <div class="workingMobSections">
-        <img class="SectionNumber" src="assets/imgs/circle1.png" />
-        <img class="SectionImage" src="assets/imgs/phone1.png" />
+        <img class="SectionNumber" src="assets/imgs/circle3.png" />
+        <img class="SectionImage" src="assets/imgs/phone3.png" />
         <div>
-          <h2>Save on ride</h2>
+          <h2>Shorten the customer buying journey</h2>
           <p>
-            With inDriver, you can book rides way cheaper! Say no to compulsory
-            rates and high-demand manipulations.
+            Shorten the customer buying journey and assist your customers in pre
+            purchase journey by engaging them with short videos. Let your
+            customers buy in video.
           </p>
         </div>
       </div>
@@ -173,11 +177,9 @@
           <span class="accentText">bubble.</span>
         </h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
-          adipisci a et nulla natus, beatae omnis iste reiciendis, aliquam offi
-          <br /><br />
-          beatae omnis iste reiciendis, aliquam officia voluptatibus voluptate
-          voluptas beatae omnis iste reiciendis
+          Elevate your social selling game with Kraya. Streamline your social
+          selling process and increase sales with our user-friendly ecommerce
+          app.
         </p>
         <div class="EmailMobileCTA">
           <a href="#">Join the waitlist ➜</a>
@@ -193,7 +195,8 @@
         </div>
         <div class="emailSubmitForm">
           <input type="text" placeholder="Enter Id" />
-          <button type="submit">➜</button>
+          <input type="text" placeholder="Name" />
+          <button>Submit ➜</button>
         </div>
       </div>
     </div>
@@ -206,7 +209,7 @@
         <div class="faqQue">
           <div>
             <i class="bx bxs-circle"></i>
-            <p >What is Kraya?</p>
+            <p>What is Kraya?</p>
           </div>
           <i class="bx bxs-chevrons-right"></i>
         </div>
@@ -255,45 +258,53 @@
       <hr class="rounded" />
       <div class="mobfaqs queClicked">
         <div class="mobFaqQues">
-          <h2>Where can I watch?</h2>
+          <h2>What is Kraya?</h2>
           <i class="bx bx-x faqToggleButton"></i>
         </div>
         <div class="mobFaqAns">
-          Nibh quisque suscipit fermentum netus nulla cras porttitor euismod
-          nulla. Orci, dictumst nec aliquet id ullamcorper venenatis.
+          Kraya helps social sellers and small businesses to boost their sales
+          through the power of social media. Our app makes it easy for social
+          sellers to create and manage their online storefronts, connect with
+          customers, and track their sales and analytics all in one place.
         </div>
       </div>
       <hr class="rounded" />
       <div class="mobfaqs">
         <div class="mobFaqQues">
-          <h2>Where can I watch?</h2>
+          <h2>Why Kraya?</h2>
           <i class="bx bx-plus faqToggleButton"></i>
         </div>
         <div class="mobFaqAns">
-          Nibh quisque suscipit fermentum netus nulla cras porttitor euismod
-          nulla. Orci, dictumst nec aliquet id ullamcorper venenatis.
+          Kraya helps social sellers and small businesses to boost their sales
+          through the power of social media. Our app makes it easy for social
+          sellers to create and manage their online storefronts, connect with
+          customers, and track their sales and analytics all in one place.
         </div>
       </div>
       <hr class="rounded" />
       <div class="mobfaqs">
         <div class="mobFaqQues">
-          <h2>Where can I watch?</h2>
+          <h2>How will things work ?</h2>
           <i class="bx bx-plus faqToggleButton"></i>
         </div>
         <div class="mobFaqAns">
-          Nibh quisque suscipit fermentum netus nulla cras porttitor euismod
-          nulla. Orci, dictumst nec aliquet id ullamcorper venenatis.
+          Kraya helps social sellers and small businesses to boost their sales
+          through the power of social media. Our app makes it easy for social
+          sellers to create and manage their online storefronts, connect with
+          customers, and track their sales and analytics all in one place.
         </div>
       </div>
       <hr class="rounded" />
       <div class="mobfaqs">
         <div class="mobFaqQues">
-          <h2>Where can I watch?</h2>
+          <h2>How will things work ?</h2>
           <i class="bx bx-plus faqToggleButton"></i>
         </div>
         <div class="mobFaqAns">
-          Nibh quisque suscipit fermentum netus nulla cras porttitor euismod
-          nulla. Orci, dictumst nec aliquet id ullamcorper venenatis.
+          Kraya helps social sellers and small businesses to boost their sales
+          through the power of social media. Our app makes it easy for social
+          sellers to create and manage their online storefronts, connect with
+          customers, and track their sales and analytics all in one place.
         </div>
       </div>
       <hr class="rounded" />
