adarshnjena -> support@kraya.shop

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
     </div>
     <div class="Contactform">
       <form
-        action="https://formsubmit.co/adarshnnnjena@gmail.com"
+        action="https://formsubmit.co/support@kraya.shop"
         method="POST"
       >
         <div class="input-field">
