--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </div>
         <form
           class="emailSubmitForm"
-          action="https://formsubmit.co/adarshnnnjena@gmail.com"
+          action="https://formsubmit.co/support@kraya.shop"
           method="POST"
         >
           <input type="email" placeholder="Enter Id" name="email" />
@@ -318,10 +318,7 @@
     <div class="footer">
       <div class="contactUs">
         <h2>Contact Us</h2>
-        <form
-          action="https://formsubmit.co/adarshnnnjena@gmail.com"
-          method="POST"
-        >
+        <form action="https://formsubmit.co/support@kraya.shop" method="POST">
           <input type="text" placeholder="Name" name="name" />
           <input type="email" placeholder="Email" name="email" />
           <textarea
