--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
     <title>Kraya</title>
-    <link rel="icon" href="./assets/imgs/logo.png" type="image/x-icon" />
+    <link rel="icon" href="./assets/imgs/favicon.png" type="image/x-icon" />
   </head>
   <body>
     <header>
