join waitlist + data changes

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         </ul>
         <ul>
           <li class="PCmenu">
-            <a class="navCTA" href="#">Join the waitlist ➜</a>
+            <a class="navCTA" href="#emailSubmit">Join the waitlist ➜</a>
           </li>
           <li class="MOBmenu">
             <a class="navCTA menuToggleButton">Menu</a>
             <div class="navbarClose menuToggle">
               <a href="/contact.html">Contact Us</a>
-              <a>Join the waitlist</a>
+              <a href="#emailSubmit">Join the waitlist</a>
             </div>
           </li>
         </ul>
@@ -71,7 +71,7 @@
         </div>
       </div>
       <div class="discriptionCTA">
-        <a href="#">Join the waitlist ➜</a>
+        <a href="#emailSubmit">Join the waitlist ➜</a>
       </div>
     </div>
     <div class="working">
@@ -171,7 +171,7 @@
       </div>
     </div>
 
-    <div class="emailSubmit">
+    <div class="emailSubmit" id="emailSubmit">
       <div class="emailSubmitLeft">
         <h1>
           Let’s <span class="accentText">Burst the</span> damn
@@ -183,7 +183,7 @@
           app.
         </p>
         <div class="EmailMobileCTA">
-          <a href="#">Join the waitlist ➜</a>
+          <a href="#emailSubmit">Join the waitlist ➜</a>
         </div>
         <a class="emailDiss"
           >What is Kraya ? <i class="bx bx-right-arrow-alt"></i
@@ -204,6 +204,26 @@
           <button type="submit">Submit ➜</button>
         </form>
       </div>
+    </div>
+    <div class="mobEmailSubmitRight">
+      <i class="bx bx-x mobWaitlistHide"></i>
+      <div class="mobEar">
+        <h1>You only hear from us when it matters.</h1>
+        <img src="assets/imgs/ear.png" />
+      </div>
+      <p>
+        Elevate your social selling game with Kraya. Streamline your social
+        selling process and increase sales with our user-friendly ecommerce app.
+      </p>
+      <form
+        class="mobEmailSubmitForm"
+        action="https://formsubmit.co/support@kraya.shop"
+        method="POST"
+      >
+        <input type="email" placeholder="Enter Id" name="email" />
+        <input type="text" placeholder="Name" name="name" />
+        <button type="submit">Submit ➜</button>
+      </form>
     </div>
     <div class="commingSoon">
       <h1>Coming Soon</h1>
@@ -228,14 +248,14 @@
         <div class="faqQue">
           <div>
             <i class="bx bxs-circle"></i>
-            <p>How will things work ?</p>
+            <p>Problem of social sellers Kraya is solving for ?</p>
           </div>
           <i class="bx bxs-chevrons-right"></i>
         </div>
         <div class="faqQue">
           <div>
             <i class="bx bxs-circle"></i>
-            <p>How will things work ?</p>
+            <p>What is the vision of Kraya ?</p>
           </div>
           <i class="bx bxs-chevrons-right"></i>
         </div>
