faq sec button done

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       </div>
       <div class="faqCTA">
         <p>Sell smarter, with Kraya</p>
-        <a href="#">Join the waitlist ➜</a>
+        <a href=".#emailSubmit">Join the waitlist ➜</a>
       </div>
     </div>
 
