--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="EmailMobileCTA">
           <a href="#emailSubmit">Join the waitlist ➜</a>
         </div>
-        <a class="emailDiss"
+        <a class="emailDiss" href="#faq"
           >What is Kraya ? <i class="bx bx-right-arrow-alt"></i
         ></a>
       </div>
@@ -228,7 +228,7 @@
     <div class="commingSoon">
       <h1>Coming Soon</h1>
     </div>
-    <div class="faq">
+    <div class="faq" id="faq">
       <h1>Frequently Asked Questions</h1>
       <div class="faqQues">
         <div class="faqQue">
